# milrem

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  Dockerfile  README.md  app_launch.py  build.sh  create_bundle.sh  ping.py  sensor_sender.py
src/common/: CMakeLists.txt  package.xml
src/common/include/: ring_buffer.hpp
src/logger/: CMakeLists.txt  package.xml
src/logger/include/logger/: logger.hpp
src/logger/params/: logger.yaml
src/logger/src/: logger.cpp  loggerNode.cpp
src/messages/: CMakeLists.txt  package.xml
src/messages/msg/: Data.msg
src/udp/: CMakeLists.txt  package.xml
src/udp/include/udp/: packet.hpp  udp.hpp  udp_server.hpp
src/udp/params/: udp.yaml
src/udp/src/: udp.cpp  udp_node.cpp  udp_server.cpp
