<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>logger</name>
    <version>0.0.1</version>
    <description>This package logs data received over UDP to local CSV file </description>
    <maintainer email="info@milrem.com">Mílrem AS</maintainer>
    <license>TODO: License declaration</license>

    <build_depend>messages</build_depend>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
